k8s-deploy/02-trip-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service-deployment
  labels:
    app: trip-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
        - name: trip-service
          image: duancntt.azurecr.io/trip-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  selector:
    app: trip-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
