k8s-deploy/04-ticket-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service-deployment
  labels:
    app: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: duancntt.azurecr.io/ticket-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
