k8s-deploy/05-email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: duancntt.azurecr.io/email-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
