k8s-deploy/06-bank-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service-deployment
  labels:
    app: bank-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
        - name: bank-service
          image: duancntt.azurecr.io/bank-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: bank-service
spec:
  selector:
    app: bank-service
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
