k8s-deploy/07-news-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-service-deployment
  labels:
    app: news-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
        - name: news-service
          image: duancntt.azurecr.io/news-service:v1
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
spec:
  selector:
    app: news-service
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
  type: ClusterIP
