k8s-deploy/08-ship-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ship-service-deployment
  labels:
    app: ship-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ship-service
  template:
    metadata:
      labels:
        app: ship-service
    spec:
      containers:
        - name: ship-service
          image: duancntt.azurecr.io/ship-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: ship-service
spec:
  selector:
    app: ship-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
