k8s-deploy/10-qr-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-service-deployment
  labels:
    app: qr-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-service
  template:
    metadata:
      labels:
        app: qr-service
    spec:
      containers:
        - name: qr-service
          image: duancntt.azurecr.io/qr-service:v1
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: qr-service
spec:
  selector:
    app: qr-service
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
